early release preparations

--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+Version 0.8.1:
+- fixed memory leak: layer data was never freed, eg. when opening a new image
+- fixed loading of layer names
+- fixed a freeze in the exception dialog
+- added empty "favorites" brushgroup
+- some minor gui fixes
+
 Version 0.8.0:
 - many new brushes contributed by various artists
 - brushes organized into groups
