--- a/README
+++ b/README
@@ -13,8 +13,8 @@ Building on Linux:
     Install:
     scons prefix=/usr/local install
 
-    Required: pygtk, python, swig, gtk, numpy, pycairo(>=1.4), protobuf, libpng
-    Debian users: apt-get install g++ python-dev libglib2.0-dev python-numpy swig scons gettext python-protobuf protobuf-compiler libpng12-dev
+    Required: pygtk, python, swig, gtk, numpy, pycairo(>=1.4), libpng
+    Debian users: apt-get install g++ python-dev libglib2.0-dev python-numpy swig scons gettext libpng12-dev
 
     Recommended: a pressure sensitive input device (graphic tablet)
 
